# copywriter

./: .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  poetry.toml  pyproject.toml  ruff.toml  template.env
.github/workflows/: ci.yml
docs/: index.md
src/copywriter/: __init__.py  __main__.py
src/copywriter/cli/: application.py
tests/: test_imports.py
tests/cli/: test_cli.py
